Additional logic for tablet "extra" layers.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -450,7 +450,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1384'], .tablet div.kmw-key.kmw-key-default[id$='U_1384'],  /* ᎄ */
 .phone div.kmw-key.kmw-key-default[id$='U_1388'], .tablet div.kmw-key.kmw-key-default[id$='U_1388'],  /* ᎈ */
 .phone div.kmw-key.kmw-key-default[id$='U_138C'], .tablet div.kmw-key.kmw-key-default[id$='U_138C'],   /* ᎌ */
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWE']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWE']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
@@ -472,7 +472,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FA'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FA'], /* 𞟺 */
 .phone div.kmw-key.kmw-key-default[id$='U_138B'], .tablet div.kmw-key.kmw-key-default[id$='U_138B'],  /* ᎋ */
 .phone div.kmw-key.kmw-key-default[id$='U_138F'], .tablet div.kmw-key.kmw-key-default[id$='U_138F'],  /* ᎏ */
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWU']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWU'], .tablet div.kmw-key.kmw-key-default[id$='T_WWU']
   {
     background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #ffffb5 100%);
@@ -495,7 +495,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F8'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F8'], /* 𞟸 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FB'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FB'], /* 𞟻 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FD'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FD'], /* 𞟽 */
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWI']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWI'], .tablet div.kmw-key.kmw-key-default[id$='T_WWI']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #fea3aa 100%);
@@ -509,7 +509,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12C3'], .tablet div.kmw-key.kmw-key-default[id$='U_12C3'], /* ዃ */
 .phone div.kmw-key.kmw-key-default[id$='U_1313'], .tablet div.kmw-key.kmw-key-default[id$='U_1313'], /* ጓ */
 .phone div.kmw-key.kmw-key-default[id$='U_131F'], .tablet div.kmw-key.kmw-key-default[id$='U_131F'], /* ጟ */
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWAA']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWAA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWAA']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
@@ -531,7 +531,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F9'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F9'], /* 𞟹 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FC'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FC'], /* 𞟼 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FE'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FE'], /* 𞟾 */
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWEE']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWEE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWEE']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e0d7ff 100%);
