possibly done with glow-keys on ios+android x phone+tablet

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -691,38 +691,38 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
   border-width: 1px;
 }
 
-.phone.ios div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'], .tablet div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'],
-.phone.ios div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'], .tablet div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'],
-.phone.ios div.kmw-key.kmw-key-default[id='ጀ-layer-K_J'], .tablet div.kmw-key.kmw-key-default[id='ጀ-layer-K_J'],
-.phone.ios div.kmw-key.kmw-key-default[id='ፈ-layer-K_F'], .tablet div.kmw-key.kmw-key-default[id='ፈ-layer-K_F'],
-.phone.ios div.kmw-key.kmw-key-default[id='ቀ-layer-K_Q'], .tablet div.kmw-key.kmw-key-default[id='ቀ-layer-K_Q'],
-.phone.ios div.kmw-key.kmw-key-default[id='ሐ-layer-K_H+shift'], .tablet div.kmw-key.kmw-key-default[id='ሐ-layer-K_H+shift'],
-.phone.ios div.kmw-key.kmw-key-default[id='ቸ-layer-K_C'], .tablet div.kmw-key.kmw-key-default[id='ቸ-layer-K_C'],
-.phone.ios div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'], .tablet div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'],
-.phone.ios div.kmw-key.kmw-key-default[id='የ-layer-K_Y'], .tablet div.kmw-key.kmw-key-default[id='የ-layer-K_Y'],
-.phone.ios div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'], .tablet div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'],
-.phone.ios div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'], .tablet div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'], .tablet.ios div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'], .tablet.ios div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጀ-layer-K_J'], .tablet.ios div.kmw-key.kmw-key-default[id='ጀ-layer-K_J'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፈ-layer-K_F'], .tablet.ios div.kmw-key.kmw-key-default[id='ፈ-layer-K_F'],
+.phone.ios div.kmw-key.kmw-key-default[id='ቀ-layer-K_Q'], .tablet.ios div.kmw-key.kmw-key-default[id='ቀ-layer-K_Q'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሐ-layer-K_H+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ሐ-layer-K_H+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ቸ-layer-K_C'], .tablet.ios div.kmw-key.kmw-key-default[id='ቸ-layer-K_C'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='የ-layer-K_Y'], .tablet.ios div.kmw-key.kmw-key-default[id='የ-layer-K_Y'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'],
 
-.phone.ios div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'], .tablet div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'],
-.phone.ios div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'], .tablet div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'],
-.phone.ios div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'], .tablet div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'],
-.phone.ios div.kmw-key.kmw-key-default[id='ደ-layer-K_D'], .tablet div.kmw-key.kmw-key-default[id='ደ-layer-K_D'],
-.phone.ios div.kmw-key.kmw-key-default[id='ረ-layer-K_R'], .tablet div.kmw-key.kmw-key-default[id='ረ-layer-K_R'],
-.phone.ios div.kmw-key.kmw-key-default[id='ከ-layer-K_K'], .tablet div.kmw-key.kmw-key-default[id='ከ-layer-K_K'],
-.phone.ios div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'], .tablet div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'],
-.phone.ios div.kmw-key.kmw-key-default[id='ተ-layer-K_T'], .tablet div.kmw-key.kmw-key-default[id='ተ-layer-K_T'],
-.phone.ios div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'], .tablet div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'],
-.phone div.kmw-key.kmw-key-default[id='ለ-layer-K_L'], .tablet div.kmw-key.kmw-key-default[id='ለ-layer-K_L'],
-.phone.ios div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'], .tablet div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'],
-.phone.ios div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'], .tablet div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'],
-.phone.ios div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'], .tablet div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'],
-.phone.ios div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'], .tablet div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'],
-.phone.ios div.kmw-key.kmw-key-default[id='ወ-layer-K_W'], .tablet div.kmw-key.kmw-key-default[id='ወ-layer-K_W'],
-.phone.ios div.kmw-key.kmw-key-default[id='ገ-layer-K_G'], .tablet div.kmw-key.kmw-key-default[id='ገ-layer-K_G'],
-.phone.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'], .tablet div.kmw-key.kmw-key-default[id='በ-layer-K_B'],
-.phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
-.phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
-.phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
+.phone.ios div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'], .tablet.ios div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'], .tablet.ios div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'], .tablet.ios div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'],
+.phone.ios div.kmw-key.kmw-key-default[id='ደ-layer-K_D'], .tablet.ios div.kmw-key.kmw-key-default[id='ደ-layer-K_D'],
+.phone.ios div.kmw-key.kmw-key-default[id='ረ-layer-K_R'], .tablet.ios div.kmw-key.kmw-key-default[id='ረ-layer-K_R'],
+.phone.ios div.kmw-key.kmw-key-default[id='ከ-layer-K_K'], .tablet.ios div.kmw-key.kmw-key-default[id='ከ-layer-K_K'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'], .tablet.ios div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'],
+.phone.ios div.kmw-key.kmw-key-default[id='ተ-layer-K_T'], .tablet.ios div.kmw-key.kmw-key-default[id='ተ-layer-K_T'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ለ-layer-K_L'], .tablet.ios div.kmw-key.kmw-key-default[id='ለ-layer-K_L'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'], .tablet.ios div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'],
+.phone.ios div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'], .tablet.ios div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'],
+.phone.ios div.kmw-key.kmw-key-default[id='ወ-layer-K_W'], .tablet.ios div.kmw-key.kmw-key-default[id='ወ-layer-K_W'],
+.phone.ios div.kmw-key.kmw-key-default[id='ገ-layer-K_G'], .tablet.ios div.kmw-key.kmw-key-default[id='ገ-layer-K_G'],
+.phone.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'], .tablet.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'],
+.phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
+.phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
+.phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
 
 
 .phone.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'], .tablet.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'],
@@ -737,11 +737,13 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 .phone.ios div.kmw-key.kmw-key-default[id='ቨ-extra-K_V'],
 
 /*
- ቕቐጝጘ𞟥አዀ𞟨ᎀᎈ
+ ጝጘ𞟥አዀ𞟨
  */
-.tablet.ios div.kmw-key.kmw-key-default[id='𞟠-extra-U_1E7E0'],
+.tablet.ios div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
+.tablet.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_1E318'],
+.tablet.ios div.kmw-key.kmw-key-default[id='𞟠-extra-U_1E7E5'],
 
-.phone div.kmw-key.kmw-key-default[id='latin-punct-layer-T_BANG'], .phone div.kmw-key.kmw-key-default[id='ethio-punct-layer-T_1362']
+.phone.ios div.kmw-key.kmw-key-default[id='latin-punct-layer-T_BANG'], .phone.ios div.kmw-key.kmw-key-default[id='ethio-punct-layer-T_1362']
 {
     /* background:#F6EEE3; */
      background: #EBE8E2;
@@ -751,13 +753,86 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
      box-shadow: 0 0 2px 2px #777;
 }
 
-.phone.android div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.android div.kmw-key.kmw-key-default[id='መ-layer-K_M']
+.phone.android div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'], .tablet.android div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'],
+.phone.android div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'], .tablet.android div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'],
+.phone.android div.kmw-key.kmw-key-default[id='ጀ-layer-K_J'], .tablet.android div.kmw-key.kmw-key-default[id='ጀ-layer-K_J'],
+.phone.android div.kmw-key.kmw-key-default[id='ፈ-layer-K_F'], .tablet.android div.kmw-key.kmw-key-default[id='ፈ-layer-K_F'],
+.phone.android div.kmw-key.kmw-key-default[id='ቀ-layer-K_Q'], .tablet.android div.kmw-key.kmw-key-default[id='ቀ-layer-K_Q'],
+.phone.android div.kmw-key.kmw-key-default[id='ሐ-layer-K_H+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ሐ-layer-K_H+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='ቸ-layer-K_C'], .tablet.android div.kmw-key.kmw-key-default[id='ቸ-layer-K_C'],
+.phone.android div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='የ-layer-K_Y'], .tablet.android div.kmw-key.kmw-key-default[id='የ-layer-K_Y'],
+.phone.android div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'],
+
+.phone.android div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'], .tablet.android div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'],
+.phone.android div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'], .tablet.android div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'],
+.phone.android div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'], .tablet.android div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'],
+.phone.android div.kmw-key.kmw-key-default[id='ደ-layer-K_D'], .tablet.android div.kmw-key.kmw-key-default[id='ደ-layer-K_D'],
+.phone.android div.kmw-key.kmw-key-default[id='ረ-layer-K_R'], .tablet.android div.kmw-key.kmw-key-default[id='ረ-layer-K_R'],
+.phone.android div.kmw-key.kmw-key-default[id='ከ-layer-K_K'], .tablet.android div.kmw-key.kmw-key-default[id='ከ-layer-K_K'],
+.phone.android div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'], .tablet.android div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'],
+.phone.android div.kmw-key.kmw-key-default[id='ተ-layer-K_T'], .tablet.android div.kmw-key.kmw-key-default[id='ተ-layer-K_T'],
+.phone.android div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='ለ-layer-K_L'], .tablet.android div.kmw-key.kmw-key-default[id='ለ-layer-K_L'],
+.phone.android div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'], .tablet.android div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'],
+.phone.android div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'], .tablet.android div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'],
+.phone.android div.kmw-key.kmw-key-default[id='ወ-layer-K_W'], .tablet.android div.kmw-key.kmw-key-default[id='ወ-layer-K_W'],
+.phone.android div.kmw-key.kmw-key-default[id='ገ-layer-K_G'], .tablet.android div.kmw-key.kmw-key-default[id='ገ-layer-K_G'],
+.phone.android div.kmw-key.kmw-key-default[id='በ-layer-K_B'], .tablet.android div.kmw-key.kmw-key-default[id='በ-layer-K_B'],
+.phone.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
+.phone.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
+.phone.android div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.android div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
+
+.phone.android div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'], .tablet.android div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'],
+
+.phone.android div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
+.phone.android div.kmw-key.kmw-key-default[id='ዠ-extra-U_12E5'],
+.phone.android div.kmw-key.kmw-key-default[id='ሠ-extra-U_1225'],
+.phone.android div.kmw-key.kmw-key-default[id='ኸ-extra-K_K+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='ኀ-extra-U_1285'],
+.phone.android div.kmw-key.kmw-key-default[id='ፀ-extra-U_1345'],
+.phone.android div.kmw-key.kmw-key-default[id='ፐ-extra-K_P'],
+.phone.android div.kmw-key.kmw-key-default[id='ቨ-extra-K_V'],
+
+.tablet.android div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
+.tablet.android div.kmw-key.kmw-key-default[id='ጘ-extra-U_1E318'],
+.tablet.android div.kmw-key.kmw-key-default[id='𞟠-extra-U_1E7E5'],
+
+.phone.android div.kmw-key.kmw-key-default[id='latin-punct-layer-T_BANG'], .phone.android div.kmw-key.kmw-key-default[id='ethio-punct-layer-T_1362']
 {
-    color:#777;
-    /* background:#F6EEE3; */
-     background: #eceae4;
      border-style: solid;
      border-width: 1px;
-     border-color: #777;
-     box-shadow: 0 0 2px 2px #777;
+     border-color: #eceae4;
+     box-shadow: 0 0 2px 2px #eceae4;
+}
+
+
+.tablet.ios div.kmw-key.kmw-key-default[id='ዀ-extra-U_12C0'],
+.tablet.ios div.kmw-key.kmw-key-default[id='𞟨-extra-U_1E7E8'],
+.tablet.ios div.kmw-key.kmw-key-default[id='ᎀ-extra-U_1380'],
+.tablet.ios div.kmw-key.kmw-key-default[id='ᎈ-extra-U_1388']
+{
+    background: #ffffff;  color: black ;
+    background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
+    border-style: solid;
+    border-width: 1px;
+    border-color: #777;
+    box-shadow: 0 0 2px 2px #777;
+}
+
+
+.tablet.android div.kmw-key.kmw-key-default[id='ዀ-extra-U_12C0'],
+.tablet.android div.kmw-key.kmw-key-default[id='𞟨-extra-U_1E7E8'],
+.tablet.android div.kmw-key.kmw-key-default[id='ᎀ-extra-U_1380'],
+.tablet.android div.kmw-key.kmw-key-default[id='ᎈ-extra-U_1388']
+{
+    background: #ffffff;  color: black ;
+    background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
+    border-style: solid;
+    border-width: 1px;
+    border-color: #777;
+    box-shadow: 0 0 2px 2px #777;
 }
