--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -724,7 +724,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 .phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
 .phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
 
-
 .phone.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'], .tablet.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'],
 
 .phone.ios div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
@@ -736,9 +735,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 .phone.ios div.kmw-key.kmw-key-default[id='ፐ-extra-K_P'],
 .phone.ios div.kmw-key.kmw-key-default[id='ቨ-extra-K_V'],
 
-/*
- ጝጘ𞟥አዀ𞟨
- */
 .tablet.ios div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
 .tablet.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_1E318'],
 .tablet.ios div.kmw-key.kmw-key-default[id='𞟠-extra-U_1E7E5'],
@@ -752,6 +748,20 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
      border-color: #777;
      box-shadow: 0 0 2px 2px #777;
 }
+
+.tablet.ios div.kmw-key.kmw-key-default[id='ዀ-extra-U_12C0'],
+.tablet.ios div.kmw-key.kmw-key-default[id='𞟨-extra-U_1E7E8'],
+.tablet.ios div.kmw-key.kmw-key-default[id='ᎀ-extra-U_1380'],
+.tablet.ios div.kmw-key.kmw-key-default[id='ᎈ-extra-U_1388']
+{
+    background: #ffffff;  color: black ;
+    background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
+    border-style: solid;
+    border-width: 1px;
+    border-color: #777;
+    box-shadow: 0 0 2px 2px #777;
+}
+
 
 .phone.android div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'], .tablet.android div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'],
 .phone.android div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'], .tablet.android div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'],
@@ -809,21 +819,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
      box-shadow: 0 0 2px 2px #eceae4;
 }
 
-
-.tablet.ios div.kmw-key.kmw-key-default[id='ዀ-extra-U_12C0'],
-.tablet.ios div.kmw-key.kmw-key-default[id='𞟨-extra-U_1E7E8'],
-.tablet.ios div.kmw-key.kmw-key-default[id='ᎀ-extra-U_1380'],
-.tablet.ios div.kmw-key.kmw-key-default[id='ᎈ-extra-U_1388']
-{
-    background: #ffffff;  color: black ;
-    background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
-    border-style: solid;
-    border-width: 1px;
-    border-color: #777;
-    box-shadow: 0 0 2px 2px #777;
-}
-
-
 .tablet.android div.kmw-key.kmw-key-default[id='ዀ-extra-U_12C0'],
 .tablet.android div.kmw-key.kmw-key-default[id='𞟨-extra-U_1E7E8'],
 .tablet.android div.kmw-key.kmw-key-default[id='ᎀ-extra-U_1380'],
@@ -833,6 +828,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
     border-style: solid;
     border-width: 1px;
-    border-color: #777;
-    box-shadow: 0 0 2px 2px #777;
+     border-color: #eceae4;
+     box-shadow: 0 0 2px 2px #eceae4;
 }
