--- a/release/gff/gff_amharic/source/help/html.css
+++ b/release/gff/gff_amharic/source/help/html.css
@@ -1,7 +1,5 @@
 .highlightExample {font-family: GeezWeb !important; font-weight: bold; font-size: 1.4em; color: #0000ff}
 .highlightKeys img {vertical-align:baseline !important}
-.input {font-weight: bold; font-size: 1.2em; color: #a64826}
-.output {font-weight: bold; font-size: 1.2em; color: #0000ff}
 .typing p, ul {margin-top: 0px; margin-bottom: 2px}
 
 code {
@@ -37,6 +35,7 @@ kbd {
 }
 .key_example
 {
+  text-indent: 0px;
   background-color: #ebebeb;
 }
 .geez {
