63 - Kanuri Ǝ, double overdot, docs
Added Kanuri ǝƎ (from Q key), and double overdot for tone (esp with i), and updated docs. Also turns off ꜱᴍᴀʟʟ ᴄᴀᴘꜱ ᴍᴏᴅᴇ on backspace in case people trigger it accidentally.

--- a/experimental/n/naijatype/source/naijatype.css
+++ b/experimental/n/naijatype/source/naijatype.css
@@ -1,8 +1,8 @@
-/*h1 {
-font-size: 250%;
+/* Version 63 */
+h1.naijatype {
+font-size: 150%;
 color: rgb(200,10,10);
-    }
-*/
+}
 
 body {
     background: rgb(193, 194, 193);
