[andika] Update keyboards using Andika to new version

--- a/experimental/n/naijatype/source/naijatype.css
+++ b/experimental/n/naijatype/source/naijatype.css
@@ -1,5 +1,21 @@
+h1.naijatype {
+font-size: 150%;
+color: rgb(200,10,10);
+}
+
+body {
+    background: rgb(193, 194, 193);
+    font-family: "Andika","DejaVu Sans","AndikaAfr","Andika Afr","Andika New Basic Compact";
+}
 .kmw-key-row {
 }
+/* easier selecting from below *//*
+.phone .kmw-key-square-ex  {
+   margin: 0 0 -30px 5px;
+}
+.phone .kmw-key-square-ex .kmw-key-default {
+   margin: 0 0 30px 5px;
+}*/
 
 .phone.android .kmw-key.kmw-key-default, .phone.ios .kmw-key.kmw-key-default {
 color: black;
@@ -82,7 +98,7 @@ margin-bottom: 15px;
 
   /* Style for callout used on phones */
   #kmw-popup-callout {
-  background-color: #eff3f9;
+    /* background-color: #eff3f9;*/
   }
 
     .phone.ios .kmw-key-layer-group {background-color: #eee}
@@ -103,4 +119,5 @@ margin-bottom: 15px;
 	.kmw-key.kmw-key-default.kmw-spacebar .kmw-spacebar-caption {
 		color: gray;
 	}
-  
+
+}
