--- a/release/sil/sil_mali_azerty/source/welcome/style.css
+++ b/release/sil/sil_mali_azerty/source/welcome/style.css
@@ -41,7 +41,7 @@ col.kbd     {width:120px;}
 .button:hover {background: #BEE6FD; background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.15, #EAF6FD), color-stop(0.47, #D9F0FC), color-stop(0.48, #BEE6FD), color-stop(0.9, #A7D8F5)); background-image: -webkit-linear-gradient(top, #EAF6FD 15%,#D9F0FC 47%,#BEE6FD 48%,#A7D8F5 90%); background-image: -moz-linear-gradient(top, #EAF6FD 15%,#D9F0FC 47%,#BEE6FD 48%,#A7D8F5 90%); background-image: -ms-linear-gradient(top, #EAF6FD 15%,#D9F0FC 47%,#BEE6FD 48%,#A7D8F5 90%); background-image: -o-linear-gradient(top, #EAF6FD 15%,#D9F0FC 47%,#BEE6FD 48%,#A7D8F5 90%); background-image: linear-gradient(top, #EAF6FD 15%,#D9F0FC 47%,#BEE6FD 48%,#A7D8F5 90%);}
 
 /* Language and Keycap Examples */
-.lang2,.languageExample {font-family:"Charis SIL Mali"; color:blue; }
+.lang2,.languageExample {font-family:"Charis Mali"; color:blue; }
 .lang2 {font-size:150%; line-height:1em;}
 .hebrew .lang2, .hebrew .languageExample {font-family:"Ezra SIL";}
 
@@ -162,7 +162,7 @@ col.kbd     {width:120px;}
         
         .keytext {
           
-		  font:	19px "Charis SIL Mali"; 
+		  font:	19px "Charis Mali"; 
           position: absolute; 
           display: block;
           right: 5px;
