Fix to ህ input from hint on ኅ layer.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -825,13 +825,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     transition: 2s;
 }
 
-/*
-.phone.android div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'], .phone.ios div.kmw-key.kmw-key-default[id='ፐ-layer-K_P'+shift],
-.phone.android div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'], .phone.ios div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'], 
-.phone.android div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'], .phone.ios div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'],
-.phone.android div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z+shift'], .phone.ios div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z+shift'],
-.phone.android div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'], .phone.ios div.kmw-key.kmw-key-default[id='ቨ-layer-K_V']  
-{
-    color: gray; 
+.phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M']:click {
+    box-shadow: 0;
 }
-*/
